tests/ui/rfcs/rfc-2632-const-trait-impl/cross-crate.stock.stderr
error[E0282]: type annotations needed
  --> $DIR/cross-crate.rs:12:11
   |
LL |     Const.func();
   |           ^^^^
   |
help: try using a fully qualified path to specify the expected types
   |
LL |     <cross_crate::Const as cross_crate::MyTrait<host>>::func(Const);
   |     +++++++++++++++++++++++++++++++++++++++++++++++++++++++++     ~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
